[gd_scene load_steps=5 format=2]

[ext_resource path="res://screens/Menu/MenuSettings.gd" type="Script" id=1]
[ext_resource path="res://assets/Themes/default_theme.tres" type="Theme" id=2]

[sub_resource type="ButtonGroup" id=1]
resource_name = "GoreGroup"

[sub_resource type="Animation" id=2]
resource_name = "fade"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 646, 41 ), Vector2( 415, 41 ) ]
}

[node name="MenuSettings" type="Node2D"]
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 415.0
margin_top = 41.0
margin_right = 653.0
margin_bottom = 312.0
theme = ExtResource( 2 )

[node name="SettingsContainer" type="MarginContainer" parent="VBoxContainer"]
margin_right = 238.0
margin_bottom = 237.0
custom_constants/margin_right = 20
custom_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/SettingsContainer"]
margin_right = 218.0
margin_bottom = 222.0

[node name="MusicLabel" type="Label" parent="VBoxContainer/SettingsContainer/VBoxContainer"]
margin_right = 218.0
margin_bottom = 24.0
text = "MUSIC_VOLUME_LABEL"

[node name="MusicVolume" type="HSlider" parent="VBoxContainer/SettingsContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 218.0
margin_bottom = 44.0
max_value = 1.0
step = 0.02
page = 0.2
value = 0.5

[node name="SoundLabelContainer" type="MarginContainer" parent="VBoxContainer/SettingsContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 218.0
margin_bottom = 87.0
custom_constants/margin_top = 15

[node name="SoundLabel" type="Label" parent="VBoxContainer/SettingsContainer/VBoxContainer/SoundLabelContainer"]
margin_top = 15.0
margin_right = 218.0
margin_bottom = 39.0
text = "SOUND_VOLUME_LABEL"

[node name="SoundVolume" type="HSlider" parent="VBoxContainer/SettingsContainer/VBoxContainer"]
margin_top = 91.0
margin_right = 218.0
margin_bottom = 107.0
max_value = 1.0
step = 0.02
page = 0.2
value = 0.5

[node name="GoreLabelContainer" type="MarginContainer" parent="VBoxContainer/SettingsContainer/VBoxContainer"]
margin_top = 111.0
margin_right = 218.0
margin_bottom = 150.0
custom_constants/margin_top = 15

[node name="GoreLabel" type="Label" parent="VBoxContainer/SettingsContainer/VBoxContainer/GoreLabelContainer"]
margin_top = 15.0
margin_right = 218.0
margin_bottom = 39.0
text = "GORE_LABEL"

[node name="GoreOption1" type="CheckBox" parent="VBoxContainer/SettingsContainer/VBoxContainer"]
margin_top = 154.0
margin_right = 218.0
margin_bottom = 186.0
group = SubResource( 1 )
text = "GORE_1_BUTTON"

[node name="GoreOption2" type="CheckBox" parent="VBoxContainer/SettingsContainer/VBoxContainer"]
margin_top = 190.0
margin_right = 218.0
margin_bottom = 222.0
group = SubResource( 1 )
text = "GORE_2_BUTTON"

[node name="BackButton" type="Button" parent="VBoxContainer"]
margin_top = 241.0
margin_right = 238.0
margin_bottom = 271.0
rect_min_size = Vector2( 0, 30 )
text = "BACK_BUTTON"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fade = SubResource( 2 )
[connection signal="value_changed" from="VBoxContainer/SettingsContainer/VBoxContainer/MusicVolume" to="." method="_on_MusicVolume_value_changed"]
[connection signal="value_changed" from="VBoxContainer/SettingsContainer/VBoxContainer/SoundVolume" to="." method="_on_SoundVolume_value_changed"]
[connection signal="toggled" from="VBoxContainer/SettingsContainer/VBoxContainer/GoreOption1" to="." method="_on_GoreOption1_toggled"]
[connection signal="toggled" from="VBoxContainer/SettingsContainer/VBoxContainer/GoreOption2" to="." method="_on_GoreOption2_toggled"]
[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
